--- a/views/bloc/list.hbs
+++ b/views/bloc/list.hbs
@@ -1,6 +1,6 @@
 
 <table class="table table-hover"style= "border : 2px solid black; border-collapse: collapse;font-weight: bold;">
-    <thead style="background-color: blueviolet;">
+    <thead style="background-color: #8d65b3;">
         <tr>
             <th>Code</th>
             <th>Libelle</th>
@@ -24,4 +24,4 @@
 </table>
 <center>
 <h3><a class="badge rounded-pill bg-light" style="width: 50%;" href="/bloc" ><i class="fa fa-plus"></i> Create New</a> </h3>
-<h3><a class="badge rounded-pill bg-light" style="width: 50%;" href="/salle/list"><i class="fa fa-list-alt"></i> Bloc List</a></h3></center>
+</center>
