--- a/views/crenau/list.hbs
+++ b/views/crenau/list.hbs
@@ -1,6 +1,6 @@
 
 <table class="table table-hover"style= "border : 2px solid black; border-collapse: collapse;font-weight: bold;">
-    <thead style="background-color: blueviolet;">
+    <thead style="background-color: #8d65b3;">
         <tr>
             <th>hrdebut</th>
             <th>hrfin</th>
