--- a/views/occupation/list.hbs
+++ b/views/occupation/list.hbs
@@ -23,7 +23,7 @@
         socket.on('test',receive);
         </script>
 <table  class="table table-hover"style= "border : 2px solid black; border-collapse: collapse;font-weight: bold;">
-    <thead style="background-color: blueviolet;">
+    <thead style="background-color: #8d65b3;">
         <tr>
             <th>Date</th>
             <th>Crenau</th>
@@ -51,5 +51,3 @@
 </table>
 <center>
 <h3><a class="badge rounded-pill bg-light" style="width: 50%;" href="/occupation" ><i class="fa fa-plus"></i> Create New</a> </h3>
-<h3><a class="badge rounded-pill bg-light" style="width: 50%;" href="/salle/list"><i class="fa fa-list-alt"></i> Salle List</a></h3></center>
-<h3><a class="badge rounded-pill bg-light" style="width: 50%;" href="/crenau/list"><i class="fa fa-list-alt"></i> Crenau List</a></h3></center>
