--- a/views/salle/cher.hbs
+++ b/views/salle/cher.hbs
@@ -23,5 +23,5 @@
     </tbody>
 </table>
 <center>
-<h3><a class="badge rounded-pill bg-light" style="width: 50%;" href="/salle" ><i class="fa fa-plus"></i> Create New</a> </h3>
-<h3><a class="badge rounded-pill bg-light" style="width: 50%;" href="/salle/list"><i class="fa fa-list-alt"></i> Bloc List</a></h3></center>
+
+<h3><a class="badge rounded-pill bg-light" style="width: 50%;" href="/salle/list"><i class="fa fa-list-alt"></i> Salle List</a></h3></center>
