--- a/views/salle/list.hbs
+++ b/views/salle/list.hbs
@@ -1,7 +1,7 @@
 
 <h3 class="text-center">Salle List</h3>
 <table class="table table-hover"style= "border : 2px solid black; border-collapse: collapse;font-weight: bold;">
-    <thead style="background-color: blueviolet;">
+    <thead style="background-color: #8d65b3;">
         <tr>
             <th>Code</th>
             <th>Libelle</th>
@@ -43,5 +43,4 @@
 </table>
 
 <center>
-<h3><a class="badge rounded-pill " style="width: 50%;background-color: blueviolet;" href="/salle" ><i class="fa fa-plus"></i> Create New </a> </h3>
-<h3><a class="badge rounded-pill " style="width: 50%;background-color: blueviolet;" href="/bloc/list"><i class="fa fa-list-alt"></i> Bloc List</a></h3></center>
+<h3><a class="badge rounded-pill " style="width: 50%;background-color: #f4f2f7;" href="/salle" ><i class="fa fa-plus"></i> Create New </a> </h3>
